[gd_scene load_steps=5 format=3 uid="uid://cskfdi00i7p44"]

[ext_resource type="Script" uid="uid://bl1uwbvl31ur2" path="res://ui/trade_gui/script/trade_gui.gd" id="1_nqy6q"]
[ext_resource type="Texture2D" uid="uid://r5kifmgrrpjf" path="res://assets/ui&ux/Windows-9-Sliced.png" id="1_wx0f3"]
[ext_resource type="PackedScene" uid="uid://ctffn2ishv66c" path="res://ui/trade_gui/player_slot/player_slot.tscn" id="3_pbtbk"]
[ext_resource type="PackedScene" uid="uid://c45v1px5mc0yh" path="res://ui/trade_gui/npc_slot/npc_slot_gui.tscn" id="4_1nasd"]

[node name="TradeGUI" type="Control"]
process_mode = 3
z_index = 999
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 47.0
offset_top = 4.0
offset_right = 47.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nqy6q")

[node name="PanelContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -47.0
offset_top = -204.0
offset_right = -47.0
offset_bottom = 196.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="PlayerTradeGUI" type="NinePatchRect" parent="PanelContainer"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 2
texture = ExtResource("1_wx0f3")
region_rect = Rect2(208, 16, 48, 48)

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/PlayerTradeGUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -162.0
offset_top = -152.0
offset_right = 162.0
offset_bottom = 138.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/PlayerTradeGUI/ScrollContainer"]
layout_mode = 2
theme_override_constants/margin_top = 14
theme_override_constants/margin_right = 67
theme_override_constants/margin_bottom = 94

[node name="GridContainer" type="GridContainer" parent="PanelContainer/PlayerTradeGUI/ScrollContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 83
theme_override_constants/v_separation = 73
columns = 4

[node name="PlayerTradeSlotGUI" parent="PanelContainer/PlayerTradeGUI/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("3_pbtbk")]
layout_mode = 2

[node name="PlayerTradeSlotGUI2" parent="PanelContainer/PlayerTradeGUI/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("3_pbtbk")]
layout_mode = 2

[node name="PlayerTradeSlotGUI3" parent="PanelContainer/PlayerTradeGUI/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("3_pbtbk")]
layout_mode = 2

[node name="PlayerTradeSlotGUI4" parent="PanelContainer/PlayerTradeGUI/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("3_pbtbk")]
layout_mode = 2

[node name="PlayerTradeSlotGUI5" parent="PanelContainer/PlayerTradeGUI/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("3_pbtbk")]
layout_mode = 2

[node name="PlayerTradeSlotGUI6" parent="PanelContainer/PlayerTradeGUI/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("3_pbtbk")]
layout_mode = 2

[node name="PlayerTradeSlotGUI7" parent="PanelContainer/PlayerTradeGUI/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("3_pbtbk")]
layout_mode = 2

[node name="PlayerTradeSlotGUI8" parent="PanelContainer/PlayerTradeGUI/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("3_pbtbk")]
layout_mode = 2

[node name="PlayerTradeSlotGUI9" parent="PanelContainer/PlayerTradeGUI/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("3_pbtbk")]
layout_mode = 2

[node name="PlayerTradeSlotGUI10" parent="PanelContainer/PlayerTradeGUI/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("3_pbtbk")]
layout_mode = 2

[node name="PlayerTradeSlotGUI11" parent="PanelContainer/PlayerTradeGUI/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("3_pbtbk")]
layout_mode = 2

[node name="PlayerTradeSlotGUI12" parent="PanelContainer/PlayerTradeGUI/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("3_pbtbk")]
layout_mode = 2

[node name="PlayerTradeSlotGUI13" parent="PanelContainer/PlayerTradeGUI/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("3_pbtbk")]
layout_mode = 2

[node name="PlayerTradeSlotGUI14" parent="PanelContainer/PlayerTradeGUI/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("3_pbtbk")]
layout_mode = 2

[node name="PlayerTradeSlotGUI15" parent="PanelContainer/PlayerTradeGUI/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("3_pbtbk")]
layout_mode = 2

[node name="PlayerTradeSlotGUI16" parent="PanelContainer/PlayerTradeGUI/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("3_pbtbk")]
layout_mode = 2

[node name="NPCTradeGUI" type="NinePatchRect" parent="PanelContainer"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 2
texture = ExtResource("1_wx0f3")
region_rect = Rect2(208, 16, 48, 48)

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/NPCTradeGUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -162.0
offset_top = -152.0
offset_right = 162.0
offset_bottom = 138.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/NPCTradeGUI/ScrollContainer"]
layout_mode = 2
theme_override_constants/margin_top = 14
theme_override_constants/margin_right = 67
theme_override_constants/margin_bottom = 94

[node name="GridContainer" type="GridContainer" parent="PanelContainer/NPCTradeGUI/ScrollContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 83
theme_override_constants/v_separation = 73
columns = 4

[node name="NPCTradeSlotGUI" parent="PanelContainer/NPCTradeGUI/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("4_1nasd")]
layout_mode = 2

[node name="NPCTradeSlotGUI2" parent="PanelContainer/NPCTradeGUI/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("4_1nasd")]
layout_mode = 2

[node name="NPCTradeSlotGUI3" parent="PanelContainer/NPCTradeGUI/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("4_1nasd")]
layout_mode = 2

[node name="NPCTradeSlotGUI4" parent="PanelContainer/NPCTradeGUI/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("4_1nasd")]
layout_mode = 2

[node name="NPCTradeSlotGUI5" parent="PanelContainer/NPCTradeGUI/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("4_1nasd")]
layout_mode = 2

[node name="NPCTradeSlotGUI6" parent="PanelContainer/NPCTradeGUI/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("4_1nasd")]
layout_mode = 2

[node name="NPCTradeSlotGUI7" parent="PanelContainer/NPCTradeGUI/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("4_1nasd")]
layout_mode = 2

[node name="NPCTradeSlotGUI8" parent="PanelContainer/NPCTradeGUI/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("4_1nasd")]
layout_mode = 2

[node name="NPCTradeSlotGUI9" parent="PanelContainer/NPCTradeGUI/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("4_1nasd")]
layout_mode = 2

[node name="NPCTradeSlotGUI10" parent="PanelContainer/NPCTradeGUI/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("4_1nasd")]
layout_mode = 2

[node name="NPCTradeSlotGUI11" parent="PanelContainer/NPCTradeGUI/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("4_1nasd")]
layout_mode = 2

[node name="NPCTradeSlotGUI12" parent="PanelContainer/NPCTradeGUI/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("4_1nasd")]
layout_mode = 2

[node name="NPCTradeSlotGUI13" parent="PanelContainer/NPCTradeGUI/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("4_1nasd")]
layout_mode = 2

[node name="NPCTradeSlotGUI14" parent="PanelContainer/NPCTradeGUI/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("4_1nasd")]
layout_mode = 2

[node name="NPCTradeSlotGUI15" parent="PanelContainer/NPCTradeGUI/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("4_1nasd")]
layout_mode = 2

[node name="NPCTradeSlotGUI16" parent="PanelContainer/NPCTradeGUI/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("4_1nasd")]
layout_mode = 2

[node name="NPCTradeSlotGUI17" parent="PanelContainer/NPCTradeGUI/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("4_1nasd")]
layout_mode = 2

[node name="NPCTradeSlotGUI18" parent="PanelContainer/NPCTradeGUI/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("4_1nasd")]
layout_mode = 2

[node name="NPCTradeSlotGUI19" parent="PanelContainer/NPCTradeGUI/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("4_1nasd")]
layout_mode = 2

[node name="NPCTradeSlotGUI20" parent="PanelContainer/NPCTradeGUI/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("4_1nasd")]
layout_mode = 2

[node name="NPCTradeSlotGUI21" parent="PanelContainer/NPCTradeGUI/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("4_1nasd")]
layout_mode = 2

[node name="NPCTradeSlotGUI22" parent="PanelContainer/NPCTradeGUI/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("4_1nasd")]
layout_mode = 2

[node name="NPCTradeSlotGUI23" parent="PanelContainer/NPCTradeGUI/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("4_1nasd")]
layout_mode = 2

[node name="NPCTradeSlotGUI24" parent="PanelContainer/NPCTradeGUI/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("4_1nasd")]
layout_mode = 2

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 0
offset_left = 133.0
offset_top = 82.0
offset_right = 322.0
offset_bottom = 130.0
texture = ExtResource("1_wx0f3")
region_rect = Rect2(208, 16, 48, 48)

[node name="Label" type="Label" parent="NinePatchRect"]
layout_mode = 2
offset_left = 22.0
offset_top = 12.0
offset_right = 183.0
offset_bottom = 61.0
grow_horizontal = 2
grow_vertical = 2
text = "Test
"
vertical_alignment = 1

[node name="NinePatchRect3" type="NinePatchRect" parent="."]
layout_mode = 0
offset_left = 904.0
offset_top = 83.0
offset_right = 947.0
offset_bottom = 131.0
texture = ExtResource("1_wx0f3")
region_rect = Rect2(208, 16, 48, 48)

[node name="Close" type="Button" parent="NinePatchRect3"]
layout_mode = 2
offset_top = -2.0
offset_right = 43.0
offset_bottom = 47.0
grow_horizontal = 2
grow_vertical = 2
text = "X"

[node name="NinePatchRect2" type="NinePatchRect" parent="."]
layout_mode = 0
offset_left = 537.0
offset_top = 82.0
offset_right = 726.0
offset_bottom = 130.0
texture = ExtResource("1_wx0f3")
region_rect = Rect2(208, 16, 48, 48)

[connection signal="pressed" from="NinePatchRect3/Close" to="." method="_on_close_pressed"]
